[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"

[project]
name = "HistomicsTKSimilarity"
dynamic = ["version"]
readme = "README.rst"
classifiers = ["License :: OSI Approved :: Apache Software License"]
requires-python = ">=3.10"
dependencies = [
    "girder-client",
    "girder-slicer-cli-web",
    "large-image[sources]",
    "timm",
    "torch",
    "torchvision",
    "tqdm",
    "transformers",
]
